Fixing horizontal scoll on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,10 @@
 //   }
 // }
 
+html {
+  overflow-x: hidden;
+}
+
 .text-babu, .icon-babu {
     line-height: 2;
 }
@@ -23,6 +27,7 @@ body {
   font-family: "Varela Round", "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   padding-bottom: 200px;
   overflow-x: hidden;
+  position: relative;
   width: 100%;
 }
 
